--- a/OpenKeychain/src/main/res/xml/usb_device_filter.xml
+++ b/OpenKeychain/src/main/res/xml/usb_device_filter.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <usb-device class="11"/>
     <usb-device vendor-id="1050"/>
+    <usb-device vendor-id="1050" product-id="03f5" />
+    <!--<usb-device class="11"/>
     <usb-device vendor-id="1050" product-id="0010" />
     <usb-device vendor-id="1050" product-id="0110" />
     <usb-device vendor-id="1050" product-id="0111" />
@@ -12,4 +13,6 @@
     <usb-device vendor-id="1050" product-id="0405" />
     <usb-device vendor-id="1050" product-id="0407" />
     <usb-device vendor-id="1050" product-id="0410" />
+    <usb-device vendor-id="4176" product-id="227" />
+    <usb-device vendor-id="1050" product-id="03f5" />-->
 </resources>
